# AugmentA

./: .gitignore  .gitmodules  CITATION.cff  LICENSE.md  NOTICE  README.md  Registration_ICP_GP_template.txt  function.py  main.py  open_orifices_manually.py  open_orifices_with_curvature.py  pipeline.py  prealign_meshes.py  pyproject.toml  requirements.txt  resample_surf_mesh.py
.gitlab/issue_templates/: Default.md  Question.md  error.md,
Atrial_LDRBM/: README.md  element_tag.csv  requirements.txt
Atrial_LDRBM/Generate_Boundaries/: atrial_boundary_generator.py  epi_endo_separator.py  extract_rings.py  extract_rings_TOP_epi_endo.py  file_manager.py  generate_mesh.py  generate_surf_id.py  mesh.py  mesh_handler.py  ring_detector.py  separate_epi_endo.py  surface_id_generator.py  tag_loader.py  top_epi_endo.py  workflow_paths.py
Atrial_LDRBM/Generate_Boundaries/LA/: extract_rings.py  extract_rings_Debbie.py  generate_bilayer.py  la_extract_epi_endo.py  la_extract_rings.py  la_generate_mesh.py  (+5 more)
docker/: Docker-compose.yml  Dockerfile-x64  README.md  requirements.txt
mesh/: LA_EAM.vtp  LA_map.vtk  meanshape.vtk
standalones/: create_SSM_instance.py  function.py  getmarks.py  open_orifices_manually.py  open_orifices_with_curvature.py  prealign_meshes.py  resample_surf_mesh.py
tests/: README.md  test_config.py  test_integration.py
tests/test_data/: LA_MRI.vtp  LA_MRI_apexes.csv  LA_MRI_orifices.csv  LA_cutted.vtk
tune_conductivity_from_clinical_LAT_map/: Methods_fit_to_clinical_LAT.py  element_tag.csv  stimulation.par  tune_conductivities_to_fit_clinical_LAT.py
(+77 files in other folders)
