[project]
name = "augmenta"
version = "v1.0"
description = "Patient-specific Augmented Atrial model Generation Tool"
authors = [{ name = "lourdes.diaz", email = "lourdes.diaz@kit.edu" },
    { name = "Pascal Maierhofer", email = "pascal.maierhofer@kit.edu" }]
license = "ACADEMIC PUBLIC LICENSE (openCARP, v1.0)"
readme = "README.md"
requires-python = "^3.10"

dependencies = [
    "pandas~=1.5.2",
    "transformations~=2022.9.26",
    "h5py~=3.7.0",
    "meshio~=5.3.4",
    "scikit-learn~=1.2.1",
    "pandas==1.5.3",
    "numpy==1.24.0",
    "matplotlib==3.7.2",
    "matplotlib-inline==0.1.6",
    "fonttools >=4.43.0",
    "pillow>=10.3.0"
]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
